# BOOZER_MAGFIE

./: 0_README  CMakeLists.txt  CMakeSources.txt  magfie_test.f90  neo_magfie.f90  neo_magfie.f90.orig  neo_magfie_perturbation.f90  neo_sub.f90  spline_cof.f90  spline_int.f90
tokamak_circ/: magfie_test.in  neo.in
